# parallel-histogram-equalization

./: .gitignore  CMakeLists.txt
benchmarks/benchmark_1/: cpu.json  gpu.json  gpu_mem_shared.json
benchmarks/benchmark_2/: cpu.json  gpu.json  gpu_mem_shared.json
benchmarks/benchmark_3/: gpu.json  gpu_mem_shared.json
benchmarks/benchmark_4/: gpu.json  gpu_mem_shared.json
benchmarks/benchmark_5/: gpu.json  gpu_mem_shared.json
media/: cuda_shared_memory.drawio
src/: main.cpp  main.cu  utils.h
utils/: graph_tracer.py
